Fix the display issue on safari

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -533,6 +533,7 @@ video {
   text-align: left;
   margin: 15px 15px 15px 15px;
   display: inline-flex;
+  display: -webkit-inline-flex;
   background-color: $white;
   box-shadow: 0 1px 4px 0px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0 1px 4px 0px rgba(0, 0, 0, 0.25);
